feat: adjust docs colums data
Signed-off-by: yuluo-yx <yuluo08290126@gmail.com>

--- a/blog/AI-large-models/深度学习初探.md
+++ b/blog/AI-large-models/深度学习初探.md
@@ -5,6 +5,7 @@ date: 2025-01-01 15:45:35
 authors: yuluo
 tags: [AI, machine learning]
 keywords: [AI, machine learning]
+image: /img/machine_learning/image-20240323191347399.png
 ---
 
 <!-- truncate -->
