--- a/blog/essay/随笔.md
+++ b/blog/essay/随笔.md
@@ -31,4 +31,4 @@ keywords: [life]
 
 &emsp;&emsp;最后，附一张于今天下午拍的照片，希望年过半百，也能有这样的状态。
 
-![郑州东周路地铁口弹钢琴的老人](../../static/img/other/other2.jpg)
+![郑州东周路地铁口弹钢琴的老人](/img/other/other2.jpg)
