--- a/docs/column/AI/大模型专栏-大模型应用场景.md
+++ b/docs/column/AI/大模型专栏-大模型应用场景.md
@@ -1,5 +1,6 @@
 ---
-slug: LLMs-AI-llms-apply-where
+id: LLMs-AI-llms-apply-where
+slug: /LLMs-AI-llms-apply-where
 title: 大模型专栏--大模型应用场景
 date: 2024-11-24 21:44:20
 authors: yuluo
