--- a/docs/column/AI/大模型专栏-大模型开发框架.md
+++ b/docs/column/AI/大模型专栏-大模型开发框架.md
@@ -1,5 +1,6 @@
 ---
-slug: LLMs-AI-llms-dev-framework
+id: LLMs-AI-llms-dev-framework
+slug: /LLMs-AI-llms-dev-framework
 title: 大模型专栏--大模型开发框架
 date: 2024-11-27 21:38:25
 authors: yuluo
@@ -41,7 +42,7 @@ There are several primary needs that LangChain aims to address:
 
 了解每个系统组成之前，一张清晰的架构图是必不可少的：
 
-![LangChain 主要组件和架构图](../../static/img/ai/ai-7.png)
+![LangChain 主要组件和架构图](/img/ai/ai-7.png)
 
 从图中我们看出 LangChain 所做的事情和一些抽象行为。过多细节我们不再深入了。这里只是对 LangChain 有个大致了解和认知。
 
@@ -49,7 +50,7 @@ There are several primary needs that LangChain aims to address:
 
 上面我们结束了 LangChain 要解决的问题和架构。下面了解一下围绕 LangChain 都做了哪些更高级的开发工具和框架。
 
-![7c3ff150404c521defe05eabe61534c6](../../static/img/ai/ai-8.png)
+![7c3ff150404c521defe05eabe61534c6](/img/ai/ai-8.png)
 
 从图中，我们可以看到基于 LangChain 衍生出了一套非常庞大的大模型生态：
 
