--- a/docs/column/AI/大模型专栏-大模型开发生态.md
+++ b/docs/column/AI/大模型专栏-大模型开发生态.md
@@ -1,5 +1,6 @@
 ---
-slug: LLMs-AI-llms-dev-ecosystem
+id: LLMs-AI-llms-dev-ecosystem
+slug: /LLMs-AI-llms-dev-ecosystem
 title: 大模型专栏-大模型开发生态
 date: 2024-11-25 22:16:43
 authors: yuluo
