feat: add something
Signed-off-by: shown.Ji <yuluo08290126@gmail.com>

--- a/docs/column/dizi/di-01.md
+++ b/docs/column/dizi/di-01.md
@@ -10,6 +10,12 @@ keywords: ["笛子"]
 
 <!-- truncate -->
 
+初学选择 F 和 E 调笛子。
+
+## 笛子结构
+
+![笛子结构](/img/dizi/image02.png)
+
 ## 手形与指法
 
 ![手形与指法](/img/dizi/音阶.png)
