feat: update about
Signed-off-by: shown.Ji <yuluo08290126@gmail.com>

--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -35,6 +35,7 @@ import social from '@site/data/social'
 - 2024 年 8 月：获得 Apache/Hertzbeat Committer 提名，加入 Apache；
 - 2024 年 12 月：获得 Spring AI Alibaba Committer 的提名；
 - 2025 年 4 月：获取 Spring AI Alibaba PMC member 提名；
+- 2025 年 6 月：加入 Istio Github 社区；
 - 持续更新......
 
 ### 开源身份
