--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -42,16 +42,14 @@ import social from '@site/data/social'
 
 ### 开源身份
 
+- Spring AI Alibaba PMC Member
 - Spring Cloud Alibaba Committer
-- Spring AI Alibaba Committer
 - Apache Hertzbeat Committer
 - LinuxSuren/API-Testing Committer
-- Apache Dubbo/Dubbo-kubernetes Contributor
-- Envoy Gateway，Aapche Fury Contributor
 
 ## 技术领域
 
-Java | Golang | MicroService | Service Mesh | AI | Cloud Native | Vue3 | Neovim 🚀
+Java | Golang | MicroService | Service Mesh | AI | Cloud Native | Vue3 | Neovim | Gateway 🚀
 
 正在学习 cloud native 和 AI 
 
