docs: add design pattern related docs
Signed-off-by: yuluo-yx <yuluo08290126@gmail.com>

--- a/docs/column/design-pattern/introduction.mdx
+++ b/docs/column/design-pattern/introduction.mdx
@@ -1,7 +1,7 @@
 ---
 id: introduction
 slug: /design-pattern
-title: AI
+title: Design Pattern
 date: 2025-07-20
 authors: yuluo
 tags: [column，'Design-Pattern']
@@ -10,11 +10,18 @@ keywords: [column, 'Design-Pattern']
 
 <!-- truncate -->
 
-# Design Pattern
+> 设计模式是对软件系统中常用写法的总结与抽象，不经意间可能就使用某种了设计模式 🚀
 
-Go & Java 实现
+> 此设计模式中的所有代码都可以在这里找到 [Design Pattern](https://github.com/yuluo-yx/design-pattern)。
 
 ## 设计原则
+
+1. 开放封闭原则（Open Close Principle）
+2. 里氏替换原则（Liskov Substitution Principle）
+3. 依赖倒置原则（Dependence Inversion Principle）
+4. 接口隔离原则（Interface Segregation Principle）
+5. 迪米特法则（最少知识原则）（Demeter Principle）
+6. 单一职责原则（Principle of single responsibility）
 
 ![设计原则](https://github.com/mohuishou/go-design-pattern/blob/master/imgs/img01.jpg)
 
@@ -53,11 +60,24 @@ Go & Java 实现
 21. 解释器模式（Interpreter Design Pattern）
 22. 中介者模式（Mediator Design Pattern）
 
+## 不常用设计模式
+
+1. 原型模式
+2. 门面模式
+3. 组合模式
+4. 享元模式
+5. 访问者模式
+6. 备忘录模式
+7. 命令模式
+8. 解释器模式
+9. 中介模式
+
 ## 参考
 
 1. https://github.com/mohuishou/go-design-pattern
-2. https://github.com/senghoo/golang-design-pattern
-3. https://github.com/youlookwhat/DesignPattern
+2. https://refactoringguru.cn/design-patterns/
+3. https://github.com/senghoo/golang-design-pattern
+4. https://github.com/youlookwhat/DesignPattern
 
 ```mdx-code-block
 import DocCardList from '@theme/DocCardList';
