--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -13,31 +13,31 @@ import social from '@site/data/social'
 
 ## 名字由来
 
-“牧生” 寓意为“在广阔天地间，放牧自己的生活与理想”。希望有一种钝感，自然的生活方式，：在社会自然中寻找平衡与自由，通过放牧的方式，感受生命的真谛和自然之美。 （🤔
+“牧生” 寓意为“在广阔天地间，放牧自己的生活与理想”。希望有一种钝感，自然的生活方式，：在社会自然中寻找平衡与自由，通过放牧的方式，感受生命的真谛和自然之美。（🤔
 
 ### 特别经历
 
-1. 大二接触开源，大四未毕业获得了 Spring Cloud Alibaba Committer 提名。
-2. I 人担任过社区周会主持。
-3. 参与发起了 Spring Cloud Alibaba AI 项目。
+1. 大二接触开源，大四未毕业获得了 Spring Cloud Alibaba Committer 身份；
+2. I 人担任过社区周会主持；
+3. 参与发起了 Spring Cloud Ali1baba AI（现 Spring AI Alibaba）项目。
 
 ### 开源经历
 
 - 2022 年 10 月：接触 Spring Cloud Alibaba 开源项目，提交第一个 PR；
-- 2023 年 2 月：正式进入 Spring Cloud Alibaba 维护者群；
-- 2023 年 6 月：报名参加开源之夏 Spring Cloud Alibaba 社区项目；
+- 2023 年 6 月：参加开源之夏 Spring Cloud Alibaba 社区项目；
 - 2023 年 10 月：在 LiunxSuren/API-Testing 提交第一个 PR；
 - 2023 年 11 月：Spring Cloud Alibaba 开源之夏题目成功结项；
-- 2024 年 2 月：提名 Spring Cloud Alibaba 社区 Committer；
-- 2024 年 3 月：发起 Spring Cloud Alibaba AI 项目；
-- 2024 年 5 月：在 Apache/Hertzbeat 社区提交第一个 PR，同时积极参与 API-Testing 项目；
-- 2024 年 6 月：获得 LinuxSuren/API-Testing Committer，大学生活结束，大学毕业；
-- 2024 年 8 月：获得 Apache/Hertzbeat Committer 提名，加入 Apache；
+- 2024 年 2 月：获得 Spring Cloud Alibaba 社区 Committer 身份；
+- 2024 年 3 月：参与发起 Spring Cloud Alibaba AI 项目；
+- 2024 年 5 月：在 Apache/Hertzbeat 社区提交第一个 PR，同时积极参与 API-Testing；
+- 2024 年 6 月：获得 LinuxSuren/API-Testing Committer，大学毕业；
+- 2024 年 8 月：获得 Apache/Hertzbeat Committer 提名，加入 Apache org；
 - 2024 年 12 月：获得 Spring AI Alibaba Committer 的提名；
 - 2025 年 4 月：获得 Spring AI Alibaba PMC member 提名，很长一段时间都在维护 SAA；
 - 2025 年 6 月：加入 Istio Github 社区；
 - 2025 年 7 月：加入 Dromara Github 社区；
-- 2025 年 7 月：提交 Apache Sehnyu 的第一个 PR 和 Proposal；
+- 2025 年 7 月：提交 Apache Sehnyu 的第一个 PR；
+- 2025 年 8 月：提交 vllm-project/semantic-router 的第一个 PR；
 - 持续更新......
 
 ### 开源身份
@@ -46,12 +46,13 @@ import social from '@site/data/social'
 - Spring Cloud Alibaba Committer
 - Apache Hertzbeat Committer
 - LinuxSuren/API-Testing Committer
+- semantic-router/Istio/Shenyu contributor
 
 ## 技术领域
 
-Java | Golang | MicroService | Service Mesh | AI | Cloud Native | Vue3 | Neovim | Gateway 🚀
+Java | Go | MicroService | AI | Cloud Native | Vue3 | Gateway 🚀
 
-正在学习 cloud native 和 AI 
+正在学习 AI & cloud native 
 
 ### 联系方式
 
@@ -72,6 +73,6 @@ Java | Golang | MicroService | Service Mesh | AI | Cloud Native | Vue3 | Neovim 
 
 ---
 
-感谢你能看到这里，希望我的分享对你有帮助，如果你有什么困扰，也可咨询我，在我时间有限的情况下，我会竭力回复 🫡 
+感谢你能看到这里，希望我的分享对你有帮助。如果你有什么困扰，也可咨询我，有时间时，我会竭力回复! 🫡 
 
 <Comment />
