--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -36,8 +36,9 @@ import social from '@site/data/social'
 - 2025 年 4 月：获得 Spring AI Alibaba PMC member 提名，很长一段时间都在维护 SAA；
 - 2025 年 6 月：加入 Istio Github 社区；
 - 2025 年 7 月：加入 Dromara Github 社区；
-- 2025 年 7 月：提交 Apache Sehnyu 的第一个 PR；
+- 2025 年 7 月：提交 Apache ShenYu 的第一个 PR；
 - 2025 年 8 月：提交 vllm-project/semantic-router 的第一个 PR；
+- 2025 年 11 月：获取 Apache ShenYu Committer 提名；
 - 持续更新......
 
 ### 开源身份
@@ -45,14 +46,15 @@ import social from '@site/data/social'
 - Spring AI Alibaba PMC Member
 - Spring Cloud Alibaba Committer
 - Apache Hertzbeat Committer
+- Apache ShenYu Committer
 - LinuxSuren/API-Testing Committer
-- semantic-router/Istio/Shenyu contributor
+- vllm/semantic-router/Istio/Spring AI Contributor
 
 ## 技术领域
 
 Java | Go | MicroService | AI | Cloud Native | Vue3 | Gateway 🚀
 
-正在学习 AI & cloud native 
+正在学习 AI & cloud native
 
 ### 联系方式
 
@@ -73,6 +75,6 @@ Java | Go | MicroService | AI | Cloud Native | Vue3 | Gateway 🚀
 
 ---
 
-感谢你能看到这里，希望我的分享对你有帮助。如果你有什么困扰，也可咨询我，有时间时，我会竭力回复! 🫡 
+感谢你能看到这里，希望我的分享对你有帮助。如果你有什么困扰，也可咨询我，有时间时，我会竭力回复! 🫡
 
 <Comment />
