--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -39,6 +39,7 @@ import social from '@site/data/social'
 - 2025 年 7 月：提交 Apache ShenYu 的第一个 PR；
 - 2025 年 8 月：提交 vllm-project/semantic-router 的第一个 PR；
 - 2025 年 11 月：获取 Apache ShenYu Committer 提名；
+- 2025 年 11 月：在 [open-telemetry/opentelemetry-go-compile-instrumentation](https://github.com/open-telemetry/opentelemetry-go-compile-instrumentation) 贡献代码以加入 open-telemetry Github 社区；
 - 持续更新......
 
 ### 开源身份
@@ -49,6 +50,7 @@ import social from '@site/data/social'
 - Apache ShenYu Committer
 - LinuxSuren/API-Testing Committer
 - vllm/semantic-router/Istio/Spring AI Contributor
+- open-telemetry/opentelemetry-go-compile-instrumentation Contributor
 
 ## 技术领域
 
