--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -27,18 +27,18 @@ import social from '@site/data/social'
 - 2023 年 6 月：参加开源之夏 Spring Cloud Alibaba 社区项目；
 - 2023 年 10 月：在 LiunxSuren/API-Testing 提交第一个 PR；
 - 2023 年 11 月：Spring Cloud Alibaba 开源之夏题目成功结项；
-- 2024 年 2 月：获得 Spring Cloud Alibaba 社区 Committer 身份；
-- 2024 年 3 月：参与发起 Spring Cloud Alibaba AI 项目；
+- 2024 年 2 月：获得 Spring Cloud Alibaba 社区 Committer 提名；
+- 2024 年 3 月：参与发起 Spring Cloud Alibaba AI（现 Spring AI Alibaba） 项目；
 - 2024 年 5 月：在 Apache/Hertzbeat 社区提交第一个 PR，同时积极参与 API-Testing；
-- 2024 年 6 月：获得 LinuxSuren/API-Testing Committer，大学毕业；
+- 2024 年 6 月：获得 LinuxSuren/API-Testing Committer，大学毕业 🚀；
 - 2024 年 8 月：获得 Apache/Hertzbeat Committer 提名，加入 Apache org；
-- 2024 年 12 月：获得 Spring AI Alibaba Committer 的提名；
+- 2024 年 12 月：获得 Spring AI Alibaba Committer 提名；
 - 2025 年 4 月：获得 Spring AI Alibaba PMC member 提名，很长一段时间都在维护 SAA；
 - 2025 年 6 月：加入 Istio Github 社区；
 - 2025 年 7 月：加入 Dromara Github 社区；
-- 2025 年 7 月：提交 Apache ShenYu 的第一个 PR；
+- 2025 年 7 月：提交 Apache/ShenYu 的第一个 PR；
 - 2025 年 8 月：提交 vllm-project/semantic-router 的第一个 PR；
-- 2025 年 11 月：获取 Apache ShenYu Committer 提名；
+- 2025 年 11 月：获得 Apache ShenYu Committer 提名；
 - 2025 年 11 月：在 [open-telemetry/opentelemetry-go-compile-instrumentation](https://github.com/open-telemetry/opentelemetry-go-compile-instrumentation) 贡献代码以加入 open-telemetry Github 社区；
 - 持续更新......
 
@@ -77,6 +77,6 @@ Java | Go | MicroService | AI | Cloud Native | Vue3 | Gateway 🚀
 
 ---
 
-感谢你能看到这里，希望我的分享对你有帮助。如果你有什么困扰，也可咨询我，有时间时，我会竭力回复! 🫡
+感谢你能看到这里，希望我的分享对你有帮助。如果你有什么困扰，欢迎发消息给我，会竭力回复! 🫡
 
 <Comment />
