--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -40,6 +40,7 @@ import social from '@site/data/social'
 - 2025 年 8 月：提交 vllm-project/semantic-router 的第一个 PR；
 - 2025 年 11 月：获得 Apache ShenYu Committer 提名；
 - 2025 年 11 月：在 [open-telemetry/opentelemetry-go-compile-instrumentation](https://github.com/open-telemetry/opentelemetry-go-compile-instrumentation) 贡献代码以加入 open-telemetry Github 社区；
+- 2025 年 12 月：vllm-project/semantic-router collaborator
 - 持续更新......
 
 ### 开源身份
